Error Mitigation/MagiCoder/Data/javax_xml_parsers/javax_xml_parsersOutputResult.txt
Sample: DocumentBuilder_3
----------------------------------------------------------------
stdout:
root

================================================================

Sample: DocumentBuilder_4
----------------------------------------------------------------
stderr:
java.io.FileNotFoundException: /home/yixi/comp4522/Rag_fullDescription/path_to_your_xml_file.xml (No such file or directory)
	at java.base/java.io.FileInputStream.open0(Native Method)
	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:157)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:111)
	at java.base/sun.net.www.protocol.file.FileURLConnection.connect(FileURLConnection.java:86)
	at java.base/sun.net.www.protocol.file.FileURLConnection.getInputStream(FileURLConnection.java:189)
	at java.xml/com.sun.org.apache.xerces.internal.impl.XMLEntityManager.setupCurrentEntity(XMLEntityManager.java:653)
	at java.xml/com.sun.org.apache.xerces.internal.impl.XMLVersionDetector.determineDocVersion(XMLVersionDetector.java:150)
	at java.xml/com.sun.org.apache.xerces.internal.parsers.XML11Configuration.parse(XML11Configuration.java:861)
	at java.xml/com.sun.org.apache.xerces.internal.parsers.XML11Configuration.parse(XML11Configuration.java:825)
	at java.xml/com.sun.org.apache.xerces.internal.parsers.XMLParser.parse(XMLParser.java:141)
	at java.xml/com.sun.org.apache.xerces.internal.parsers.DOMParser.parse(DOMParser.java:247)
	at java.xml/com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderImpl.parse(DocumentBuilderImpl.java:342)
	at java.xml/javax.xml.parsers.DocumentBuilder.parse(DocumentBuilder.java:178)
	at DocumentBuilder_4.main(DocumentBuilder_4.java:14)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: DocumentBuilder_5
----------------------------------------------------------------
output:
./Data/javax_xml_parsers/javaFiles/DocumentBuilder_5.java:15: error: unreported exception SAXException; must be caught or declared to be thrown
            Document doc = builder.parse(is);
                                        ^
1 error


================================================================

Sample: DocumentBuilderFactory_1
----------------------------------------------------------------
output:
./Data/javax_xml_parsers/javaFiles/DocumentBuilderFactory_1.java:9: error: exception ParserConfigurationException is never thrown in body of corresponding try statement
        } catch (ParserConfigurationException e) {
          ^
1 error


================================================================

Sample: DocumentBuilderFactory_2
----------------------------------------------------------------
stdout:
com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderImpl@46238e3f

================================================================

Sample: DocumentBuilderFactory_3
----------------------------------------------------------------
================================================================

Sample: DocumentBuilderFactory_4
----------------------------------------------------------------
stdout:
Is Validating: false

================================================================

Sample: SAXParserFactory_1
----------------------------------------------------------------
output:
./Data/javax_xml_parsers/javaFiles/SAXParserFactory_1.java:9: error: exception ParserConfigurationException is never thrown in body of corresponding try statement
        } catch (ParserConfigurationException e) {
          ^
1 error


================================================================

Sample: SAXParserFactory_2
----------------------------------------------------------------
stdout:
com.sun.org.apache.xerces.internal.jaxp.SAXParserImpl@33cb5951

================================================================

Sample: SAXParserFactory_3
----------------------------------------------------------------
================================================================

Sample: SAXParserFactory_4
----------------------------------------------------------------
stdout:
Validation feature is not supported

================================================================

